added slash theme

--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # ----------------------- #
 
 url: http://lkbgift.github.com
-title: Living, Kicking, and Breathing
+title: Lenny Blogs
 subtitle: Documented Learning
 author: Leonard Kiyoshi Bogdonoff
-simple_search: http://google.com/search
+simple_search: 
 description:
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
