--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://lkbgift.github.com
-title: Lenny Blogs
-subtitle: Documented Learning
+title: Leonard Kiyoshi Bogdonoff
+subtitle: Prespectives of a twenty something experiencing the world
 author: Leonard Kiyoshi Bogdonoff
 simple_search: 
-description:
+description: Blog about web development, trends, education, and experiencing the world.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
