--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://lkbgift.github.io
+url: http://rememberlenny.github.io
 title: Remember Lenny
 subtitle: Front-end development, startups, and culture.
 author: Leonard Bogdonoff
@@ -58,13 +58,13 @@ titlecase: true       # Converts page and post titles to titlecase
 # ----------------------- #
 
 # Github repositories
-github_user: lkbgift
+github_user: rememberlenny
 github_repo_count: 1
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user: lkbcc
+twitter_user: rememberlenny
 twitter_tweet_count: 1
 twitter_show_replies: false
 twitter_follow_button: true
@@ -77,8 +77,8 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
-googleplus_hidden: false
+googleplus_user: 107599061568558533958
+googleplus_hidden: true
 
 # Pinboard
 pinboard_user:
