--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://blog.rememberlenny.com
+url: http://rememberlenny.github.io
 title: Blog | RememberLenny
 subtitle: Thoughts on the internet
 author: Leonard Kiyoshi Bogdonoff
